<resources>
    <string name="app_name">ComercialesGEUY</string>
    <string name="calendarioCitas">Calendario de Citas</string>
    <string name="gestionPartners">Gestión de Partners</string>
    <string name="gestionPedidos">Gestión de Pedidos</string>
    <string name="enviosDelegacion">envíos a delegaciones</string>
    <string name="tituloPartners">Gestión de Partners</string>
    <string name="contentButNew">Input Button on Visitas</string>
    <string name="calendarioNuevaCita">Añadir cita</string>
    <string name="calendarioTitulo">Titulo:</string>
    <string name="calendarioInfo">Info:</string>
    <string name="calendarioGuardar">guardar</string>
    <string name="calendarioHintTexto">Información sobre su cita</string>
    <string name="calendarioHintCabecera">Título de cita</string>
    <string name="title_activity_maps">Map</string>
    <string name="fecha">Fecha</string>
    <string name="comercial">Comercial</string>
    <string name="img_linea">Es una imagen de producto</string>
    <string name="gestionPedido">Gestión del Pedido</string>
    <string name="resumenPedido">Resumen del Pedido</string>
    <string name="partner">Partner</string>
    <string name="cancelar">cancelar</string>
    <string name="confirmar">confirmar</string>
    <string name="fechaPedido">Fecha del pedido</string>
    <string name="fechaPago">Fecha del pago</string>
    <string name="fechaEnvio">Fecha del envío</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="cerrarSesión">cerrar sesión</string>
    <string name="Poblacion">Poblacion</string>
    <string name="Poblacion2">Escribe aquí la población</string>
    <string name="CIF">CIF</string>
    <string name="CIF2">Escribe aquí el CIF</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Nombre2">Escribe aquí el nombre</string>
    <string name="Apellido2">Escribe aquí el apellido</string>
    <string name="Telefono">Telefono</string>
    <string name="Telefono2">Escribe aquí el número</string>
    <string name="Correo">Correo</string>
    <string name="Correo2">Escribe aquí el correo</string>
    <string name="Nombre3">nombre</string>
    <string name="Apellido3">apellido</string>
    <string name="Poblacion3">población</string>
    <string name="CIF3">CIF</string>
    <string name="GPedido">Gestión de Pedidos</string>
    <string name="eliminarPedido">Eliminar Pedido</string>
    <string name="idPedido">Identificador del Pedido</string>
    <string name="Eliminar">Eliminar</string>
    <string name="listaPedidos">Lista de Pedidos</string>
    <string name="nuevoPedido">Nuevo Pedido</string>

</resources>