<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".pedidos.gestion.PedidoGestionActivity">

    <TextView
        android:id="@+id/txtRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/resumenPedido"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt1RP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/comercial"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRP" />

    <TextView
        android:id="@+id/txtComercialRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/comercial"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txt1RP"
        app:layout_constraintTop_toTopOf="@+id/txt1RP" />

    <TextView
        android:id="@+id/txt2RP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/partner"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1RP" />

    <TextView
        android:id="@+id/txtPartnerRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/partner"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txt2RP"
        app:layout_constraintTop_toTopOf="@+id/txt2RP" />

    <TextView
        android:id="@+id/txtPedidoRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/fechaPedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2RP" />

    <EditText
        android:id="@+id/edtFechaPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtPedidoRP"
        app:layout_constraintTop_toTopOf="@+id/txtPedidoRP" />

    <TextView
        android:id="@+id/txtEnvioRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/fechaEnvio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPedidoRP" />

    <EditText
        android:id="@+id/edtFechaEnvio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtEnvioRP"
        app:layout_constraintTop_toTopOf="@+id/txtEnvioRP" />

    <TextView
        android:id="@+id/txtPagoRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/fechaPago"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnvioRP" />

    <EditText
        android:id="@+id/edtFechaPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/txtPagoRP"
        app:layout_constraintTop_toTopOf="@+id/txtPagoRP" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvProductosRP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelarRP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPagoRP" />

    <Button
        android:id="@+id/btnCancelarRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirmarRP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConfirmarRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancelarRP"
        app:layout_constraintTop_toTopOf="@+id/btnCancelarRP" />

</androidx.constraintlayout.widget.ConstraintLayout>
