<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg1"
    android:fillViewport="true"
    tools:context=".pedidos.gestion.PedidoGestionActivity">

    <TextView
        android:id="@+id/txtPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtComercial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/comercial"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPedido" />

    <TextView
        android:id="@+id/txtcomercialPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/comercial"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtComercial"
        app:layout_constraintTop_toTopOf="@+id/txtComercial" />

    <TextView
        android:id="@+id/txt2RP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/partner"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComercial" />

    <TextView
        android:id="@+id/txtPartnerPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/partner"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txt2RP"
        app:layout_constraintTop_toTopOf="@+id/txt2RP" />

    <TextView
        android:id="@+id/txtPedidoRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/fechaPedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2RP" />

    <TextView
        android:id="@+id/txtEnvioRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/fechaEnvio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPedidoRP" />

    <TextView
        android:id="@+id/txtPagoRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/fechaPago"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnvioRP" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvProductosRP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelarLP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaPagoResum"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCancelarLP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarPedido"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEliminarPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/Eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancelarLP"
        app:layout_constraintTop_toTopOf="@+id/btnCancelarLP" />

    <TextView
        android:id="@+id/txtFechaPedidoResum"
        android:layout_width="166dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/txtPedidoRP"
        app:layout_constraintTop_toBottomOf="@+id/txtPartnerPedido" />

    <TextView
        android:id="@+id/txtFechaEnvioResum"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/txtEnvioRP"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaPedidoResum" />

    <TextView
        android:id="@+id/txtFechaPagoResum"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@+id/txtPagoRP"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaEnvioResum" />

</androidx.constraintlayout.widget.ConstraintLayout>
