<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:background="@drawable/pop_bg1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <EditText
                    android:id="@+id/edtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/Usuario"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/edtContrasenna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtUsuario"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/Contraseña"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:src="@mipmap/ic_launcher_foreground" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_item"
                android:text="@string/entrar"
                android:textColor="@color/white" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>